update head tag in HTML

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>jQuery Homework</title>
     <meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<script src="js/jquery-2.1.4.min.js"></script>
+		<script src="js.main.js"></script>
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
