remove all image tags from HTML with no errors in browser console

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="js/jquery-2.1.4.min.js"></script>
-		<script src="js.main.js"></script>
+		<script src="js/main.js"></script>
 
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -22,8 +22,6 @@
 <p><span class="seoSummary"><strong>CSS transitions</strong>&nbsp;provide a way to control animation speed when changing CSS properties. Instead of having property changes take effect immediately, you can cause the changes in a property to take place over a period of time.</span> For example, if you change the color of an element from white to black, usually the change is instantaneous. With CSS transitions enabled, changes occur at time intervals that follow an acceleration curve, all of which can be customized.</p>
 
 <p>Animations that involve transitioning between two states are often called <em>implicit transitions</em> as the states in between the start and final states are implicitly defined by the browser.</p>
-
-<p><img src="/files/4529/TransitionsPrinciple.png" alt="A CSS transition tells the browser to draw the intermediate states between the initial and final states, showing the user a smooth transitions." style="display: block; height: 196px; margin: auto; width: 680px;"></p>
 
 <p>CSS transitions let you decide which properties to animate (by <em>listing them explicitly</em>), when the animation will start (by setting a <em>delay)</em>, how long the transition will last (by setting a <em>duration</em>), and how the transition will run (by defining a <em>timing function</em>, e.g. linearly or quick at the beginning, slow at the end).</p>
 
@@ -338,7 +336,7 @@
  </div>
  </dd>
  <dt><a href="/en-US/docs/Web/CSS/transition-timing-function" title="The transition-timing-function CSS property is used to describe how the intermediate values of the CSS&nbsp;properties being affected by a transition effect are calculated. This in essence lets you establish an acceleration curve, so that the speed of the transition can vary over its duration."><code>transition-timing-function</code></a></dt>
- <dd><img src="/files/3434/TF_with_output_gt_than_1.png" alt="" style="float: left; height: 173px; margin-right: 5px; width: 130px;">Specifies a function to define how intermediate values for properties are computed. <em>Timing functions</em> determine how intermediate values of the transition are calculated. Most <a href="/en-US/docs/CSS/timing-function">timing functions</a> can be specified by providing the graph of the corresponding function, as defined by four points defining a cubic bezier. You can also choose easing from&nbsp;<a href="http://easings.net/" class="external external-icon">Easing Functions Cheat Sheet</a>.
+ <dd>Specifies a function to define how intermediate values for properties are computed. <em>Timing functions</em> determine how intermediate values of the transition are calculated. Most <a href="/en-US/docs/CSS/timing-function">timing functions</a> can be specified by providing the graph of the corresponding function, as defined by four points defining a cubic bezier. You can also choose easing from&nbsp;<a href="http://easings.net/" class="external external-icon">Easing Functions Cheat Sheet</a>.
  <div class="cleared">
  <div id="ttf_ease" style="width: 251px; display: inline-block; margin-right: 1px; margin-bottom: 1px;">
  <p><code>transition-timing-function: ease</code></p>
